Changed dumb mistake, * to +

--- a/quadraticEquationInput.html
+++ b/quadraticEquationInput.html
@@ -1,8 +1,8 @@
 <body>
   <form action="quadraticEquationAnswer.php">
     Enter quadratic:<br><br>
-    <input type="text" name="a" size="1" placeholder="a"> x ^ 2 *
-    <input type="text" name="b" size="1" placeholder="b"> x *
+    <input type="text" name="a" size="1" placeholder="a"> x ^ 2 +
+    <input type="text" name="b" size="1" placeholder="b"> x +
     <input type="text" name="c" size="1" placeholder="c"> = 0
 
     <br><br><input type="submit" name="solve" value="Solve">
