--- a/quadraticEquationInput.html
+++ b/quadraticEquationInput.html
@@ -1,9 +1,9 @@
 <body>
   <form action="quadraticEquationAnswer.php">
-    Enter quadratic:<br><br>
-    <input type="text" name="a" size="1" placeholder="a"> x ^ 2 +
+    Enter quadratic:<br><br><i>f</i>(x) =
+    <input type="text" name="a" size="1" placeholder="a"> x<sup>2</sup> +
     <input type="text" name="b" size="1" placeholder="b"> x +
-    <input type="text" name="c" size="1" placeholder="c"> = 0
+    <input type="text" name="c" size="1" placeholder="c">
 
     <br><br><input type="submit" name="solve" value="Solve">
   </form>
